--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Maria</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./fontello-6f3d1d06/css/fontello.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
