--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
     
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-<script src="/js/main.js"></script>
+<script src="js/main.js"></script>
 
 
 </body>
