--- a/index.html
+++ b/index.html
@@ -226,6 +226,43 @@
 
 
 
+    <section class="reviews">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 services-reviews__container">
+                    <h2>Отзывы</h2>
+                 </div>
+            </div>
+            <div class="row reviews-heading">
+                <div class="col-12 reviews-heading__container">
+                    <a class="active" href="">Видео отзывы</a>
+                    <a href="">Текстовые отзывы</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 reviews-swiper">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide">
+                            <img src="img/reviews/Rectangle_5.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/reviews/Rectangle_5_1.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/reviews/Rectangle5_2.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/reviews/Rectangle5_2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
